# slurmate

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  improvements.md  issues.md  problems.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
assets/: demo.slurmate.toml  demo.tape
src/slurmate/: __init__.py  builder.py  main.py  system_utils.py  theme.py  tui.py
src/slurmify/: builder.py  main.py  system_utils.py  theme.py  tui.py
src/slurmify.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: conftest.py  test_builder.py  test_main.py  test_parsers.py  test_system_utils.py  test_theme.py  test_tui.py
tests/fixtures/: scontrol_partitions.txt  sinfo_gputypes.txt  sinfo_partitions.txt  sinfo_queue.txt  squeue_jobs.txt
