[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slurmify"
version = "0.1.0"
description = "Interactive TUI wizard for generating and submitting Slurm sbatch scripts"
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Slurmify contributors"},
]
keywords = ["slurm", "sbatch", "hpc", "tui", "wizard"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Curses",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Distributed Computing",
    "Topic :: Utilities",
]
dependencies = [
    "questionary>=2.0",
    "prompt_toolkit>=3.0",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/anomalyco/slurmify"
Repository = "https://github.com/anomalyco/slurmify.git"
Issues = "https://github.com/anomalyco/slurmify/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
    "ruff>=0.3.0",
    "mypy>=1.8",
    "build>=1.0",
    "twine>=5.0",
]

[project.scripts]
slurmify = "slurmify.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
slurmify = ["py.typed"]

[tool.ruff]
target-version = "py39"
line-length = 100
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
strict = false
ignore_missing_imports = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
