[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slurmate"
version = "0.4.0"
description = "Interactive TUI wizard for generating and submitting Slurm sbatch scripts"
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Youzhi Yu", email = "yuyouzhi666@icloud.com"},
]
keywords = ["slurm", "sbatch", "hpc", "tui", "wizard"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Distributed Computing",
    "Topic :: Utilities",
]
dependencies = [
    "questionary>=2.0",
    "prompt_toolkit>=3.0,<4",
    "rich>=13.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/PursuitOfDataScience/slurmate"
Repository = "https://github.com/PursuitOfDataScience/slurmate.git"
Issues = "https://github.com/PursuitOfDataScience/slurmate/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
    "pytest-cov>=4.0",
    "ruff>=0.3.0",
    "mypy>=1.8",
    "build>=1.0",
    "twine>=5.0",
]

[project.scripts]
slurmate = "slurmate.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
slurmate = ["py.typed"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
